--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -16,7 +16,7 @@
     <p class="text-muted wow animated slideInUp h5" data-wow-delay=".15s">
     <a href="/about/"><b>About Me</b></a> 
     <!-- <span>&#8226;</span> -->
-        <!-- <a href="/docs/nithin-senthil-kumar-resume.pdf"><b>Resume</b></a> -->
+        <!-- <a href=""><b>Resume</b></a> -->
     </p>
   </div>
 </div>
