--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -1,3 +1,4 @@
+
 <div class="wow animated fadeIn" data-wow-delay=".15s">
   <a href="{{ project_url }}" class="project card text-dark">
     {%- if project_img -%}
@@ -5,17 +6,16 @@
     {%- endif -%}
     <div class="card-body">
       <h5 id="{{ project_id }}-name" class="card-title">
-          <!--{%- if project_type == "remote" -%}-->
-              <!--i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |&nbsp;-->
-          <!--{%- endif -%}-->
+          {%- if project_type == "remote" -%}
           <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |&nbsp;
+          {%- endif -%}
         {{ project_name }}
       </h5>
       <p id="{{ project_id }}-desc" class="card-text">{{ project_desc }}</p>
       <p id="{{ project_id }}-tools" class="card-text">
-        {%- for tool in project_tools -%}
-        <span class="badge badge-pill text-primary border border-primary ml-1">{{ tool }}</span>
-        {%- endfor -%}
+        {% for tool in project_tools %}
+        <span class="badge badge-pill text-primary border border-primary">{{ tool }}</span>
+        {% endfor %}
       </p>
     </div>
   </a>
